Thu Sep 27 16:34:51 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Makefile.in, htlib/HtRegex.cc, htlib/HtRegex.h,
	htlib/HtRegexReplace.cc, htlib/HtRegexReplace.h,
	htlib/HtRegexReplaceList.cc, htlib/HtRegexReplaceList.h,
	htlib/HtURLRewriter.cc, htlib/HtURLRewriter.h: Added new classes to
	support regular expressions and implement url_rewrite_rules attribute,
	using Geoff's variation of Andy Armstrong's implementation of this.

	* htlib/URL.h, htlib/URL.cc: Added URL::rewrite() method.

	* htlib/htString.h: Added Nth() method for HtRegex class.

	* htdig/Retriever.cc (got_href, got_redirect): Added calls to
	url.rewrite(), and debugging output for this.

	* htdig/htdig.cc: Added calls to make instance of HtURLRewriter class.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htcommon/defaults.cc: Added url_rewrite_rules attribute.

Mon Sep 17 16:52:07 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/running.html: New documentation on how to run after configuring.
	* htdoc/rundig.html: New manual page for rundig script.
	* htdoc/install.html: Added link to running.html.
	* htdoc/contents.html: Added link to running.html, rundig.html, related
	projects. Updated links to contrib and developer site. Got rid of
	link to web site stats.

Fri Sep 14 09:18:38 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc (RetrieveHTTP): Add port to Host: header when
	port is not default, as per RFC2616(14.23). Fixes bug #459969.

Sat Sep  8 22:04:47 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* acconfig.h, include/htconfig.h.in: Add undef for
	ALLOW_INSECURE_CGI_CONFIG, which if defined does about what you'd
	expect. (This is for any wrapper authors who don't want to rewrite
	but are willing to run insecure.)

	* htsearch/htsearch.cc: Only allow the -c flag to work when
	REQUEST_METHOD is undefined. Fixes PR#458013.

Fri Aug 31 16:00:37 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
